
<resources>
    <string name="app_name">CP470-Group-Project</string>
    <string name="loginText">Login</string>
    <string name="signUpText">Sign Up</string>
    <string name="registerText">Register</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_regi">

Course Registration
</string>>
    <string name="ongoing">

Ongoing
</string>
    <string name="completed">
Completed
</string>
    <string name="dashboard">

Dashboard
</string>
    <string name="welcome_joh">
Favorites
    <string name="app_name">Pawk</string>
    <string name="action_settings">Settings</string>
Welcome, John Doe
</string>
</resources>
